2004-04-21  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstpad.c: (gst_pad_link_negotiate):
	  refuse to link if the link is not possible
	* configure.ac:
	* testsuite/Makefile.am:
	* testsuite/negotiation/.cvsignore:
	* testsuite/negotiation/Makefile.am:
	* testsuite/negotiation/pad_link.c: (main):
	  add test that checks the above behaviour

2004-04-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-sections.txt:
          add newly added API

2004-04-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstfilesrc.c: (gst_filesrc_init),
	(gst_filesrc_get_mmap), (gst_filesrc_get_read), (gst_filesrc_get),
	(gst_filesrc_open_file), (gst_filesrc_close_file),
	(gst_filesrc_srcpad_query), (gst_filesrc_srcpad_event):
	* gst/elements/gstfilesrc.h:
          add support for non-regular files (#140734)

2004-04-21  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_link_fixate):
	  add sophisticated error checking code to see if fixation functions
	  did their fixation right

2004-04-21  Benjamin Otte  <otte@gnome.org>

	* gst/gstcaps.c: (gst_caps_append), (gst_caps_union):
	  check for ANY caps before appending/unioning
	* gst/gstcaps.c: (gst_caps_is_subset),
	(gst_caps_is_equal), (gst_caps_structure_subtract_field),
	(gst_caps_structure_subtract), (gst_caps_subtract):
	* gst/gstcaps.h:
	  add gst_caps_is_equal, gst_caps_is_subset and gst_caps_subtract to
	  the API. deprecate gst_caps_is_equal_fixed
	* gst/gstpad.c: (gst_pad_try_set_caps):
	* gst/gstqueue.c: (gst_queue_link):
	  s/gst_caps_is_equal_fixed/gst_caps_is_equal/
	* gst/gststructure.c: (gst_structure_get_name_id):
	* gst/gststructure.h:
	  add function gst_structure_get_name_id
	* gst/gstvalue.c: (gst_value_subtract_int_int_range),
	(gst_value_create_new_range), (gst_value_subtract_int_range_int),
	(gst_value_subtract_int_range_int_range),
	(gst_value_subtract_double_double_range),
	(gst_value_subtract_double_range_double),